# movies

./: .gitignore  README.md
app/backend/: app.py  (+1 more)
ingestion/: Dockerfile  pyproject.toml
ingestion/src/: extract_movie_data.py  extract_scripts.py  get_scripts_request.py  utils.py
ingestion/tests/: test_extract_movie_data.py  test_extract_scripts.py  test_script_verification.py  test_utils.py
movies_asset_bundle/: databricks.yml  pyproject.toml  requirements-dev.txt
movies_asset_bundle/dbt/: dbt_project.yml
movies_asset_bundle/dbt/dbt_profiles/: profiles.yml
movies_asset_bundle/dbt/src/models/movie/: sources.yml
movies_asset_bundle/dbt/src/models/movie/gold/: gold_actors.sql  gold_characters.sql  gold_descriptions.sql  gold_dialogues.sql  gold_scenes.sql  gold_unknown_blocks.sql
movies_asset_bundle/dbt/src/models/movie/gold/analytics/: _analytics_models.yml  dim_actors.sql  dim_characters.sql  dim_dates.sql  dim_movies.sql  dim_sessions.sql  fact_dialogues.sql  fact_searches.sql
movies_asset_bundle/dbt/src/models/movie/gold/app/: _app_models.yml  gold_actors.sql  gold_characters.sql  gold_descriptions.sql  gold_dialogues.sql  gold_scenes.sql  gold_unknown_blocks.sql
movies_asset_bundle/dbt/src/models/movie/silver/: _silver_models.yml  silver_character_actor_map.sql  silver_movies.sql  silver_script_blocks.sql  silver_searches.sql
movies_asset_bundle/resources/: movies_asset_bundle.job.yml
movies_asset_bundle/src/: databricks_to_postgres.py  import_from_s3.py  json_to_table.py  run_pg_export.py
movies_asset_bundle/src/movies_asset_bundle/: main.py
(+72 files in other folders)
