[project]
name = "movies_asset_bundle"
version = "0.0.1"
authors = [{ name = "ricsi045@gmail.com" }]
requires-python = ">= 3.11"

[project.optional-dependencies]
dev = [
    "pytest",
    "databricks-dlt",
    "dbt-databricks"
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/movies_asset_bundle"]

[project.scripts]
main = "movies_asset_bundle.main:main"
